--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dependencies": {
         "com.unity.inputsystem":"1.6.1",
         "com.unity.ugui":"1.0.0",
-        "com.lootlocker.lootlockersdk":"https://github.com/LootLocker/unity-sdk.git#1.2.3"
+        "com.lootlocker.lootlockersdk":"https://github.com/LootLocker/unity-sdk.git"
     }
    
 }
